some basic changes

--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dance Academy | Home</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/index.js">
 </head>
 <body>
     <nav id="navbar">
         <ul>
             <div id="logo">
-                <img src="logo.png" alt="">
+                <img src="../static/logo.png" alt="">
                 SDA
             </div>
             <li><a href="/">Home</a></li>
@@ -32,7 +32,7 @@
             <h3>Dance Perfection</h3>
             <div id="card-box">
                 <div id="card-img">
-                    <img src="i2.jpg" alt="">
+                    <img src="../static/i2.jpg" alt="">
                 </div>
                 <div id="card-content">
                     <p>This is the best Dance Academy in Purvanchal</p>
@@ -43,7 +43,7 @@
             <h3>Dance the way you Like</h3>
             <div id="card-box">
                 <div id="card-img">
-                    <img src="i3.jpg" alt="">
+                    <img src="../static/i3.jpg" alt="">
                 </div>
                 <div id="card-content">
                     <p>This is the best Dance Academy in Purvanchal</p>
@@ -54,7 +54,7 @@
             <h3>Expert Teaching</h3>
             <div id="card-box">
                 <div id="card-img">
-                    <img src="i4.jpg" alt="">
+                    <img src="../static/i4.jpg" alt="">
                 </div>
                 <div id="card-content">
                     <p>This is the best Dance Academy in Purvanchal</p>
@@ -65,11 +65,11 @@
     <section id="sponser">
         <h2>Our Sponsers</h2>
         <div id="spnsrs">
-            <img src="l1.png" alt="Sponsers Image" class="spImage">
-            <img src="l2.jpeg" alt="Sponsers Image" class="spImage">
-            <img src="l3.png" alt="Sponsers Image" class="spImage">
-            <img src="l4.jpeg" alt="Sponsers Image" class="spImage">
-            <img src="l5.png" alt="Sponsers Image" class="spImage">
+            <img src="../static/l1.png" alt="Sponsers Image" class="spImage">
+            <img src="../static/l2.jpeg" alt="Sponsers Image" class="spImage">
+            <img src="../static/l3.png" alt="Sponsers Image" class="spImage">
+            <img src="../static/l4.jpeg" alt="Sponsers Image" class="spImage">
+            <img src="../static/l5.png" alt="Sponsers Image" class="spImage">
         </div>
     </section>
     <footer id="footer">
