--- a/views/index.pug
+++ b/views/index.pug
@@ -4,10 +4,10 @@ head
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Dance Academy | Home
-//-   link(rel='stylesheet' href='..\static\style.css')
+  link(rel='stylesheet' href='..\static\style.css')
 style
    include ..\static\style.css
-//-   link(rel='stylesheet' href='index.js')
+  link(rel='stylesheet' href='../static/index.js')
 nav#navbar
   ul
     #logo
